vitrail-pg-macros/tests/ui/fail/update_data_relation_field.stderr
error: relation field `author` cannot be used in update data for model `post`
  --> tests/ui/fail/update_data_relation_field.rs:3:1
   |
 3 | / schema! {
 4 | |     name update_schema
 5 | |
 6 | |     model user {
...  |
18 | | }
   | |_^
19 |
20 |   #[derive(UpdateData)]
   |            ---------- in this derive macro expansion
   |
   = note: this error originates in the macro `__vitrail_assert_update_data_type_update_schema_post` which comes from the expansion of the derive macro `UpdateData` (in Nightly builds, run with -Z macro-backtrace for more info)
